...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/videoView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
...
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoView" />

        <Button
            android:id="@+id/Next"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="8dp"
...
